--- a/three/package.json
+++ b/three/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dat.gui": "^0.7.9",
     "three": "^0.151.3",
     "vue": "^3.2.47"
   },
